--- a/English/index.html
+++ b/English/index.html
@@ -1,186 +1,101 @@
 <!DOCTYPE html>
 <html lang="nl">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="../CSS/general.css">
-  <link rel="stylesheet" type="text/css" href="../CSS/home.css">
-  <link rel="stylesheet" type="text/css" href="../CSS/bootstrap-4.3.1.css">
-  <link rel="stylesheet" type="text/css" href="../CSS/animate.css">
-  <link rel="stylesheet" type="text/css" href="../CSS/videoshowcase.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <meta name="Tim Bonnarens" content="HTML, CSS"> 
-  <title>Home</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" type="text/css" href="../../CSS/general.css">
+<link rel="stylesheet" type="text/css" href="../../CSS/bootstrap-4.3.1.css">
+<link rel="stylesheet" type="text/css" href="../../CSS/animate.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> 
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<title>Audiovisuals</title>
 </head>
+
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg"> <a class="navbar-brand"><img src="../Fotos/Logo_TimBonnarens.png"
-      class="logo_tim" alt="LogoTim"></a>
-  <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
-    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-    aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active"> <a class="nav-link activepart" href="../English/index.html">Home<span class="sr-only">(current)</span></a> </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Audiovisuals
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-          <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
-          <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
-      <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
-            href="../English/Photography/index.html">Main Page</a>
+    <nav class="navbar navbar-expand-lg"> <a class="navbar-brand"><img src="../../Fotos/Logo_TimBonnarens.png"
+          class="logo_tim" alt="LogoTim"></a>
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"> <a class="nav-link" href="../../English/index.html">Home</a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle activepart" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Audiovisuals
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item activepart" href="../../English/Audiovisuals/index.html">Main Page<span class="sr-only">(current)</span></a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="../English/Photography/portrait.html">Portrait</a>
-          <a class="dropdown-item" href="../English/Photography/atmospheric.html">Atmospheric</a>
-          <a class="dropdown-item" href="../English/Photography/nature.html">Nature</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
-            href="../English/Design/index.html">Main page</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="../English/Design/surrealism.html">Surrealism</a> <a class="dropdown-item"
-            href="Design/posters.html">Posters</a> <a class="dropdown-item" href="../English/Design/logos.html">Logos</a> <a
-            class="dropdown-item" href="../English/Design/infographics.html">Infographics</a> <a class="dropdown-item"
-            href="../English/Design/infographics.html">Campaigns</a>
-        </div>
-      </li>
-      <li class="nav-item"> <a class="nav-link" href="../English/aboutme.html">About Me</a> </li>
-      <!-- <li class="nav-item"><a class="nav-link" href="../../English/bonny.html">Bonny</a> </li> -->
-      <li class="nav-item"> <a class="nav-link" href="../English/contact.html">Contact</a> </li>
-    </ul>
-  </div>
-      <a class="language" href="../index.html"><div class="language">Dutch</div></a>
+          <a class="dropdown-item" href="../../English/Audiovisuals/video.html">Video</a>
+          <a class="dropdown-item" href="../../English/Audiovisuals/2D.html">2D-animation</a>
+          <a class="dropdown-item" href="../../English/Audiovisuals/3D.html">3D-animation</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
+                href="../../English/Photography/index.html">Main Page</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="../../English/Photography/portrait.html">Portrait</a>
+              <a class="dropdown-item" href="../../English/Photography/atmospheric.html">Atmospheric</a>
+              <a class="dropdown-item" href="../../English/Photography/nature.html">Nature</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
+                href="../../English/index.html">Main page</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="../../English/Design/surrealism.html">Surrealism</a> <a class="dropdown-item"
+                href="../../English/Design/posters.html">Posters</a> <a class="dropdown-item" href="../../English/Design/logos.html">Logos</a> <a
+                class="dropdown-item" href="../../English/Design/infographics.html">Infographics</a> <a class="dropdown-item"
+                href="../../English/Design/campaigns.html">Campaigns</a>
+            </div>
+          </li>
+          <li class="nav-item"> <a class="nav-link" href="../../English/aboutme.html">About Me</a> </li>
+          <!-- <li class="nav-item"><a class="nav-link" href="../../English/bonny.html">Bonny</a> </li> -->
+          <li class="nav-item"> <a class="nav-link" href="../../English/contact.html">Contact</a> </li>
+        </ul>
+      </div>
+      <a class="language" href="../../Audiovisuals/2D.html"><div class="language">Dutch</div></a>
     </nav>
   </header>
-
-  <main class="main">
-    <h4 class="topmarge animated fadeInLeft">Showreels</h4>
-    <div class="col showreelsTim">
-    <div class="row portfolio">
-      <div class="col-12 col-md-6">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe src="https://www.youtube.com/embed/ZlqjnuHTeo8?si=4bjyPP5pUQgFx0CO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <p>Video Showreel</p>
-        <!-- <div class="omschrijving">Als allround video designer verzorgt Tim Bonnarens video, audio en animatie.</div> -->
-        <div class="credits">Song 1: Audio Library Plus - IVAAVI - Too Sweet</div>
-        <div class="credits">Song 2: Pixabay - Zakhar Valaha - Cinematic Melody</div>
-        <div class="credits">Sound Effects: freesound.org, zapsplat and self recorded</div>
-      </div>
-      <div class="col-12 col-md-6">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://www.youtube.com/embed/lMbWDBBoz4I?si=flJiN0OmhRzckI-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
-        <p>Photoshop Showreel</p>
-        <!-- <div class="omschrijving">Als allround graphic designer verzorgt Tim Bonnarens 2D-graphics, fotografie en image retouching.</div> -->
-        <div class="credits">Song: Pixabay - Alex Grohl - Far Away</div>
+<main class="main">
+  <h4 class="topmarge animated fadeInLeft">Audiovisuals</h4>
+  <div class="row">
+    <div class="card col-6 col-sm-4 col-md-2 animated fadeInDown">
+      <a href="../Audiovisuals/video.html">
+      <div class="color-overlay"><img class="card-img-top rounded-circle mystyle" src="../../Fotos/Audiovisuals/nacht.jpg"
+        alt="Card image cap" class="fotouitgalerie"></div></a>
+      <div class="card-block text-center">
+        <h5 class="card-title animated fadeInLeft">Video</h5>
       </div>
     </div>
-</div>
-
-  <br><br>
-
-    <div class="whatIdo"><h4 class="topmarge animated fadeInLeft whatIdo">Portfolio</h4></div>
-    <article class="portfoliobox">
-    <div class="row rowportfoliobox">
-      <div class="card col-12 col-sm-6 col-md-3 animated fadeInUp">
-        <a href="Audiovisuals/index.html">
-          <img class="card-img-top rounded-circle mystyle" src="../Fotos/Audiovisuals/cupido.png" alt="Card image cap"></a>
-        <div class="card-block">
-          <h5 class="card-title animated fadeInLeft">Audiovisual Design</h5>
-          <p class="card-text textblackbg">Design of video, animation and sound</p>
+    <div class="card col-6 col-sm-4 col-md-2 animated fadeInUp">
+      <a href="../Audiovisuals/2D.html">
+      <img class="card-img-top rounded-circle mystyle"
+        src="../../Fotos/Audiovisuals/cupido.png" alt="Card image cap" class="fotouitgalerie"></a>
+        <div class="card-block text-center">
+          <h5 class="card-title animated fadeInLeft">2D-Animation</h5>
         </div>
-      </div>
-      <div class="card col-12 col-sm-6 col-md-3 animated fadeInDown">
-        <a href="Design/index.html">
-          <img class="card-img-top rounded-circle mystyle" src="../Fotos/VormgevingFox.jpg" alt="Card image cap"></a>
-        <div class="card-block">
-          <h5 class="card-title animated fadeInLeft">Graphic Design</h5>
-          <p class="card-text textblackbg">Design of logos, invites, posters, adverts, magazines, packaging, websites... Briefly: Graphic Design that can be published printed or online.</p>
-        </div>
-      </div>
-      <div class="card col-12 col-sm-6 col-md-3 animated fadeInDown">
-        <a href="Fotografie/index.html">
-          <img class="card-img-top rounded-circle mystyle" src="../Fotos/fotografiehoofdfotocamera.jpg" alt="Card image cap"></a>
-        <div class="card-block">
-          <h5 class="card-title animated fadeInLeft">Photography</h5>
-          <p class="card-text textblackbg">Digital location photographer and digital image retoucher</p>
-        </div>
-      </div>
-    </article>
-
-    <div class="row portfolio d-flex align-items-end">
-      <div class="card col-12" style="width: 18rem;">
-        <h5 class="producties col-12">Already collabed with</h5>
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Artevelde.png" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Videofy.png" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/MEET-HET.jpg" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvA.png" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvWVL.png" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_OVL.png" alt="Card image cap">
-      </div>
-      <div class="card col-9 col-sm-4 col-lg-2" style="width: 18rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Limburg.png" alt="Card image cap">
-      </div>
-      <div class="card col-3 col-sm-2 col-lg-1" style="width: 9rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_VLB_v2.png" alt="Card image cap">
-      </div>
-      <div class="card col-8 col-sm-6 col-lg-2" style="width: 9rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_JerkBeefy.png" alt="Card image cap">
-      </div>
-      <div class="card col-4 col-sm-4 col-lg-1" style="width: 9rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Envelbag.png" alt="Card image cap">
-      </div>
-      <div class="card col-6 col-sm-4 col-lg-1" style="width: 9rem;">
-        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_DaknamseBossen.png" alt="Card image cap">
+    </div>
+    <div class="card col-6 col-sm-4 col-md-2 animated fadeInDown">
+      <a href="../Audiovisuals/3D.html">
+      <img class="card-img-top rounded-circle mystyle"
+        src="../../Fotos/Audiovisuals/chase.jpg" alt="Card image cap" class="fotouitgalerie"></a>
+      <div class="card-block text-center">
+        <h5 class="card-title animated fadeInLeft">3D-Animation</h5>
       </div>
     </div>
-  </main>
-  <footer>
-    <div class="row">
-      <div class="col-12 col-sm-4 footertext">On this site, you can find my portfolio!</div>
-      <div class="col-12 col-sm-4 footertext">Available voor assignments as a freelancer!</div>
-      <div class="col-12 col-sm-4 footertext">This website is made by Tim Bonnarens.</div>
-    </div>
-  </footer>
-  <script src="./JS/home.js"></script>
+  </div>
+</main>
+<script src="../../JS/appEnglish.js"></script>
 </body>
-
 </html>
